@@ -1,60 +1,21 @@
 /*!
-* This program is free software; you can redistribute it and/or modify it under the
-* terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
-* Foundation.
-*
-* You should have received a copy of the GNU Lesser General Public License along with this
-* program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
-* or from the Free Software Foundation, Inc.,
-* 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-*
-* This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
-* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-* See the GNU Lesser General Public License for more details.
-*
-* Copyright (c) 2002-2013 Pentaho Corporation..  All rights reserved.
-*/
+ * This program is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
+ * Foundation.
+ *
+ * You should have received a copy of the GNU Lesser General Public License along with this
+ * program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
+ * or from the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU Lesser General Public License for more details.
+ *
+ * Copyright (c) 2002-2013 Pentaho Corporation..  All rights reserved.
+ */
 
 package org.pentaho.platform.web.http.api.resources;
-
-import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
-import static javax.ws.rs.core.MediaType.APPLICATION_XML;
-import static javax.ws.rs.core.MediaType.TEXT_PLAIN;
-import static javax.ws.rs.core.MediaType.WILDCARD;
-import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
-import static javax.ws.rs.core.Response.Status.FORBIDDEN;
-import static javax.ws.rs.core.Response.Status.INTERNAL_SERVER_ERROR;
-import static javax.ws.rs.core.Response.Status.NOT_FOUND;
-
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.Serializable;
-import java.text.Collator;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.StringTokenizer;
-
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.GET;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.StreamingOutput;
 
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
@@ -102,12 +63,45 @@ import org.pentaho.platform.security.policy.rolebased.actions.RepositoryReadActi
 import org.pentaho.platform.web.http.messages.Messages;
 import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 
+import javax.servlet.http.HttpServletResponse;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.GET;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.StreamingOutput;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.Serializable;
+import java.text.Collator;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.EnumSet;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
+import java.util.StringTokenizer;
+
+import static javax.ws.rs.core.MediaType.*;
+import static javax.ws.rs.core.Response.Status.*;
+
 /**
- * Represents a file node in the getRepository(). This api provides methods for discovering information about repository files as well as CRUD operations
+ * Represents a file node in the getRepository(). This api provides methods for discovering information about repository
+ * files as well as CRUD operations
  * 
  * @author aaron
  */
-@Path("/repo/files/")
+@Path( "/repo/files/" )
 public class FileResource extends AbstractJaxRSResource {
   private static final Integer MODE_OVERWRITE = 1;
 
@@ -119,7 +113,7 @@ public class FileResource extends AbstractJaxRSResource {
 
   public static final String APPLICATION_ZIP = "application/zip"; //$NON-NLS-1$
 
-  private static final Log logger = LogFactory.getLog(FileResource.class);
+  private static final Log logger = LogFactory.getLog( FileResource.class );
 
   protected RepositoryDownloadWhitelist whitelist;
 
@@ -132,21 +126,21 @@ public class FileResource extends AbstractJaxRSResource {
   public FileResource() {
   }
 
-  public FileResource(HttpServletResponse httpServletResponse) {
+  public FileResource( HttpServletResponse httpServletResponse ) {
     this();
     this.httpServletResponse = httpServletResponse;
   }
 
-  public static String idToPath(String pathId) {
+  public static String idToPath( String pathId ) {
     String path = null;
     // slashes in pathId are illegal.. we scrub them out so the file will not be found
     // if the pathId was given in slash separated format
-    if (pathId.contains(PATH_SEPARATOR)) {
-      logger.warn(Messages.getInstance().getString("FileResource.ILLEGAL_PATHID", pathId)); //$NON-NLS-1$
+    if ( pathId.contains( PATH_SEPARATOR ) ) {
+      logger.warn( Messages.getInstance().getString( "FileResource.ILLEGAL_PATHID", pathId ) ); //$NON-NLS-1$
     }
-    path = pathId.replaceAll(PATH_SEPARATOR, ""); //$NON-NLS-1$
-    path = path.replace(':', '/');
-    if (!path.startsWith(PATH_SEPARATOR)) {
+    path = pathId.replaceAll( PATH_SEPARATOR, "" ); //$NON-NLS-1$
+    path = path.replace( ':', '/' );
+    if ( !path.startsWith( PATH_SEPARATOR ) ) {
       path = PATH_SEPARATOR + path;
     }
     return path;
@@ -155,48 +149,48 @@ public class FileResource extends AbstractJaxRSResource {
   // ///////
   // DELETE
   @PUT
-  @Path("/delete")
-  @Consumes({ WILDCARD })
-  public Response doDeleteFiles(String params) {
-    String[] sourceFileIds = params.split("[,]"); //$NON-NLS-1$
+  @Path( "/delete" )
+  @Consumes( { WILDCARD } )
+  public Response doDeleteFiles( String params ) {
+    String[] sourceFileIds = params.split( "[,]" ); //$NON-NLS-1$
     try {
-      for (int i = 0; i < sourceFileIds.length; i++) {
-        getRepoWs().deleteFile(sourceFileIds[i], null);
+      for ( int i = 0; i < sourceFileIds.length; i++ ) {
+        getRepoWs().deleteFile( sourceFileIds[i], null );
       }
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       t.printStackTrace();
       return Response.serverError().build();
     }
   }
 
   @PUT
-  @Path("/deletepermanent")
-  @Consumes({ WILDCARD })
-  public Response doDeleteFilesPermanent(String params) {
-    String[] sourceFileIds = params.split("[,]"); //$NON-NLS-1$
+  @Path( "/deletepermanent" )
+  @Consumes( { WILDCARD } )
+  public Response doDeleteFilesPermanent( String params ) {
+    String[] sourceFileIds = params.split( "[,]" ); //$NON-NLS-1$
     try {
-      for (int i = 0; i < sourceFileIds.length; i++) {
-        getRepoWs().deleteFileWithPermanentFlag(sourceFileIds[i], true, null);
+      for ( int i = 0; i < sourceFileIds.length; i++ ) {
+        getRepoWs().deleteFileWithPermanentFlag( sourceFileIds[i], true, null );
       }
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       t.printStackTrace();
       return Response.serverError().build();
     }
   }
 
   @PUT
-  @Path("/restore")
-  @Consumes({ WILDCARD })
-  public Response doRestore(String params) {
-    String[] sourceFileIds = params.split("[,]"); //$NON-NLS-1$
+  @Path( "/restore" )
+  @Consumes( { WILDCARD } )
+  public Response doRestore( String params ) {
+    String[] sourceFileIds = params.split( "[,]" ); //$NON-NLS-1$
     try {
-      for (int i = 0; i < sourceFileIds.length; i++) {
-        getRepoWs().undeleteFile(sourceFileIds[i], null);
+      for ( int i = 0; i < sourceFileIds.length; i++ ) {
+        getRepoWs().undeleteFile( sourceFileIds[i], null );
       }
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       t.printStackTrace();
       return Response.serverError().build();
     }
@@ -206,94 +200,98 @@ public class FileResource extends AbstractJaxRSResource {
   // CREATE
 
   @PUT
-  @Path("{pathId : .+}")
-  @Consumes({ WILDCARD })
-  public Response createFile(@PathParam("pathId") String pathId, InputStream fileContents) throws IOException {
-    RepositoryFileOutputStream rfos = new RepositoryFileOutputStream(idToPath(pathId));
-    rfos.setCharsetName(httpServletRequest.getCharacterEncoding());
-    IOUtils.copy(fileContents, rfos);
+  @Path( "{pathId : .+}" )
+  @Consumes( { WILDCARD } )
+  public Response createFile( @PathParam( "pathId" ) String pathId, InputStream fileContents ) throws IOException {
+    RepositoryFileOutputStream rfos = new RepositoryFileOutputStream( idToPath( pathId ) );
+    rfos.setCharsetName( httpServletRequest.getCharacterEncoding() );
+    IOUtils.copy( fileContents, rfos );
     rfos.close();
     fileContents.close();
     return Response.ok().build();
   }
 
   @PUT
-  @Path("{pathId : .+}/children")
-  @Consumes({ TEXT_PLAIN })
-  public Response copyFiles(@PathParam("pathId") String pathId, @QueryParam("mode") Integer mode, String params) {
-    if (mode == null) {
+  @Path( "{pathId : .+}/children" )
+  @Consumes( { TEXT_PLAIN } )
+  public Response copyFiles( @PathParam( "pathId" ) String pathId, @QueryParam( "mode" ) Integer mode, String params ) {
+    if ( mode == null ) {
       mode = MODE_RENAME;
     }
     try {
-      String path = idToPath(pathId);
-      RepositoryFile destDir = getRepository().getFile(path);
-      String[] sourceFileIds = params.split("[,]"); //$NON-NLS-1$
-      if (mode == MODE_OVERWRITE || mode == MODE_NO_OVERWRITE) {
-        for (String sourceFileId : sourceFileIds) {
-          RepositoryFile sourceFile = getRepository().getFileById(sourceFileId);
-          if (destDir != null && destDir.isFolder() && sourceFile != null && !sourceFile.isFolder()) {
+      String path = idToPath( pathId );
+      RepositoryFile destDir = getRepository().getFile( path );
+      String[] sourceFileIds = params.split( "[,]" ); //$NON-NLS-1$
+      if ( mode == MODE_OVERWRITE || mode == MODE_NO_OVERWRITE ) {
+        for ( String sourceFileId : sourceFileIds ) {
+          RepositoryFile sourceFile = getRepository().getFileById( sourceFileId );
+          if ( destDir != null && destDir.isFolder() && sourceFile != null && !sourceFile.isFolder() ) {
             String fileName = sourceFile.getName();
-            String sourcePath = sourceFile.getPath().substring(0, sourceFile.getPath().lastIndexOf(PATH_SEPARATOR));
-            if (!sourcePath.equals(destDir.getPath())) { // We're saving to a different folder than we're copying from
-              IRepositoryFileData data = getRepository().getDataForRead(sourceFileId, SimpleRepositoryFileData.class);
-              RepositoryFileAcl acl = getRepository().getAcl(sourceFileId);
-              RepositoryFile destFile = getRepository().getFile(destDir.getPath() + PATH_SEPARATOR + fileName);
-              if (destFile == null) { // destFile doesn't exist so we'll create it.
-                RepositoryFile duplicateFile = new RepositoryFile.Builder(fileName).build();
-                getRepository().createFile(destDir.getId(), duplicateFile, data, acl, null);
-              } else if (mode == MODE_OVERWRITE) { // destFile exists so check to see if we want to overwrite it.
-                getRepository().updateFile(destFile, data, null);
-                getRepository().updateAcl(acl);
+            String sourcePath = sourceFile.getPath().substring( 0, sourceFile.getPath().lastIndexOf( PATH_SEPARATOR ) );
+            if ( !sourcePath.equals( destDir.getPath() ) ) { // We're saving to a different folder than we're copying
+                                                             // from
+              IRepositoryFileData data = getRepository().getDataForRead( sourceFileId, SimpleRepositoryFileData.class );
+              RepositoryFileAcl acl = getRepository().getAcl( sourceFileId );
+              RepositoryFile destFile = getRepository().getFile( destDir.getPath() + PATH_SEPARATOR + fileName );
+              if ( destFile == null ) { // destFile doesn't exist so we'll create it.
+                RepositoryFile duplicateFile = new RepositoryFile.Builder( fileName ).build();
+                getRepository().createFile( destDir.getId(), duplicateFile, data, acl, null );
+              } else if ( mode == MODE_OVERWRITE ) { // destFile exists so check to see if we want to overwrite it.
+                getRepository().updateFile( destFile, data, null );
+                getRepository().updateAcl( acl );
               }
             }
           }
         }
       } else {
-        for (String sourceFileId : sourceFileIds) {
-          RepositoryFile sourceFile = getRepository().getFileById(sourceFileId);
-          if (destDir != null && destDir.isFolder() && sourceFile != null && !sourceFile.isFolder()) {
+        for ( String sourceFileId : sourceFileIds ) {
+          RepositoryFile sourceFile = getRepository().getFileById( sourceFileId );
+          if ( destDir != null && destDir.isFolder() && sourceFile != null && !sourceFile.isFolder() ) {
 
             // First try to see if regular name is available
             String fileName = sourceFile.getName();
             String copyText = "";
             String rootCopyText = "";
-            String nameNoExtension = fileName.substring(0, fileName.lastIndexOf('.'));
-            String extension = fileName.substring(fileName.lastIndexOf('.'));
+            String nameNoExtension = fileName.substring( 0, fileName.lastIndexOf( '.' ) );
+            String extension = fileName.substring( fileName.lastIndexOf( '.' ) );
 
-            RepositoryFileDto testFile = getRepoWs().getFile(path + PATH_SEPARATOR + nameNoExtension + extension); //$NON-NLS-1$
-            if (testFile != null) {
+            RepositoryFileDto testFile = getRepoWs().getFile( path + PATH_SEPARATOR + nameNoExtension + extension ); //$NON-NLS-1$
+            if ( testFile != null ) {
               // Second try COPY_PREFIX, If the name already ends with a COPY_PREFIX don't append twice
-              if (!nameNoExtension.endsWith(Messages.getInstance().getString("FileResource.COPY_PREFIX"))) { //$NON-NLS-1$
-                copyText = rootCopyText = Messages.getInstance().getString("FileResource.COPY_PREFIX");
+              if ( !nameNoExtension.endsWith( Messages.getInstance().getString( "FileResource.COPY_PREFIX" ) ) ) { //$NON-NLS-1$
+                copyText = rootCopyText = Messages.getInstance().getString( "FileResource.COPY_PREFIX" );
                 fileName = nameNoExtension + copyText + extension;
-                testFile = getRepoWs().getFile(path + PATH_SEPARATOR + fileName);
+                testFile = getRepoWs().getFile( path + PATH_SEPARATOR + fileName );
               }
             }
 
             // Third try COPY_PREFIX + DUPLICATE_INDICATOR
             Integer nameCount = 1;
-            while (testFile != null) {
+            while ( testFile != null ) {
               nameCount++;
-              copyText = rootCopyText + Messages.getInstance().getString("FileResource.DUPLICATE_INDICATOR", nameCount);
+              copyText =
+                  rootCopyText + Messages.getInstance().getString( "FileResource.DUPLICATE_INDICATOR", nameCount );
               fileName = nameNoExtension + copyText + extension;
-              testFile = getRepoWs().getFile(path + PATH_SEPARATOR + fileName);
+              testFile = getRepoWs().getFile( path + PATH_SEPARATOR + fileName );
             }
-            IRepositoryFileData data = getRepository().getDataForRead(sourceFileId, SimpleRepositoryFileData.class);
-            RepositoryFileAcl acl = getRepository().getAcl(sourceFileId);
+            IRepositoryFileData data = getRepository().getDataForRead( sourceFileId, SimpleRepositoryFileData.class );
+            RepositoryFileAcl acl = getRepository().getAcl( sourceFileId );
             RepositoryFile duplicateFile = null;
 
             // If the title is different than the source file, copy it separately
-            if (!sourceFile.getName().equals(sourceFile.getTitle())) {
-              duplicateFile = new RepositoryFile.Builder(fileName).title(RepositoryFile.DEFAULT_LOCALE, sourceFile.getTitle() + copyText).build();
+            if ( !sourceFile.getName().equals( sourceFile.getTitle() ) ) {
+              duplicateFile =
+                  new RepositoryFile.Builder( fileName ).title( RepositoryFile.DEFAULT_LOCALE,
+                    sourceFile.getTitle() + copyText ).build();
             } else {
-              duplicateFile = new RepositoryFile.Builder(fileName).build();
+              duplicateFile = new RepositoryFile.Builder( fileName ).build();
             }
 
-            getRepository().createFile(destDir.getId(), duplicateFile, data, acl, null);
+            getRepository().createFile( destDir.getId(), duplicateFile, data, acl, null );
           }
         }
       }
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       t.printStackTrace();
       return Response.serverError().build();
     }
@@ -311,31 +309,31 @@ public class FileResource extends AbstractJaxRSResource {
    * @throws FileNotFoundException
    */
   @GET
-  @Path("{pathId : .+}")
-  @Produces({ WILDCARD })
-  public Response doGetFileOrDir(@PathParam("pathId") String pathId) throws FileNotFoundException {
-    String path = idToPath(pathId);
+  @Path( "{pathId : .+}" )
+  @Produces( { WILDCARD } )
+  public Response doGetFileOrDir( @PathParam( "pathId" ) String pathId ) throws FileNotFoundException {
+    String path = idToPath( pathId );
 
-    if (!isPathValid(path)) {
-      return Response.status(FORBIDDEN).build();
+    if ( !isPathValid( path ) ) {
+      return Response.status( FORBIDDEN ).build();
     }
 
-    RepositoryFile repoFile = getRepository().getFile(path);
+    RepositoryFile repoFile = getRepository().getFile( path );
 
-    if (repoFile == null) {
+    if ( repoFile == null ) {
       // file does not exist or is not readable but we can't tell at this point
-      return Response.status(NOT_FOUND).build();
+      return Response.status( NOT_FOUND ).build();
     }
 
     // check whitelist acceptance of file (based on extension)
-    if (getWhitelist().accept(repoFile.getName()) == false) {
+    if ( getWhitelist().accept( repoFile.getName() ) == false ) {
       // if whitelist check fails, we can still inline if you have PublishAction, otherwise we're FORBIDDEN
-      if (getPolicy().isAllowed(PublishAction.NAME) == false) {
-        return Response.status(FORBIDDEN).build();
+      if ( getPolicy().isAllowed( PublishAction.NAME ) == false ) {
+        return Response.status( FORBIDDEN ).build();
       }
     }
-    
-    return doGetFileOrDir(repoFile);
+
+    return doGetFileOrDir( repoFile );
   }
 
   /**
@@ -345,14 +343,15 @@ public class FileResource extends AbstractJaxRSResource {
    * @return
    * @throws FileNotFoundException
    */
-  public Response doGetFileOrDir(RepositoryFile repoFile) throws FileNotFoundException {
-    final RepositoryFileInputStream is = new RepositoryFileInputStream(repoFile);
+  public Response doGetFileOrDir( RepositoryFile repoFile ) throws FileNotFoundException {
+    final RepositoryFileInputStream is = new RepositoryFileInputStream( repoFile );
     StreamingOutput streamingOutput = new StreamingOutput() {
-      public void write(OutputStream output) throws IOException {
-        IOUtils.copy(is, output);
+      public void write( OutputStream output ) throws IOException {
+        IOUtils.copy( is, output );
       }
     };
-    return Response.ok(streamingOutput, is.getMimeType()).header("Content-Disposition", "inline; filename=\"" + repoFile.getName() + "\"").build();
+    return Response.ok( streamingOutput, is.getMimeType() ).header( "Content-Disposition",
+      "inline; filename=\"" + repoFile.getName() + "\"" ).build();
   }
 
   // Overloaded this method to try and minimize calls to the repo
@@ -360,26 +359,26 @@ public class FileResource extends AbstractJaxRSResource {
   // @GET
   // @Path("{pathId : .+}")
   // @Produces({ APPLICATION_ZIP })
-  public Response doGetDirAsZip(@PathParam("pathId") String pathId) {
-    String path = idToPath(pathId);
+  public Response doGetDirAsZip( @PathParam( "pathId" ) String pathId ) {
+    String path = idToPath( pathId );
 
-    if (!isPathValid(path)) {
-      return Response.status(FORBIDDEN).build();
+    if ( !isPathValid( path ) ) {
+      return Response.status( FORBIDDEN ).build();
     }
 
     // you have to have PublishAction in order to get dir as zip
-    if (getPolicy().isAllowed(PublishAction.NAME) == false) {
-      return Response.status(FORBIDDEN).build();
+    if ( getPolicy().isAllowed( PublishAction.NAME ) == false ) {
+      return Response.status( FORBIDDEN ).build();
     }
-    
-    RepositoryFile repoFile = getRepository().getFile(path);
 
-    if (repoFile == null) {
+    RepositoryFile repoFile = getRepository().getFile( path );
+
+    if ( repoFile == null ) {
       // file does not exist or is not readable but we can't tell at this point
-      return Response.status(NOT_FOUND).build();
+      return Response.status( NOT_FOUND ).build();
     }
 
-    return doGetDirAsZip(repoFile);
+    return doGetDirAsZip( repoFile );
   }
 
   /**
@@ -387,7 +386,7 @@ public class FileResource extends AbstractJaxRSResource {
    * @param repositoryFile
    * @return
    */
-  public Response doGetDirAsZip(RepositoryFile repositoryFile) {
+  public Response doGetDirAsZip( RepositoryFile repositoryFile ) {
 
     String path = repositoryFile.getPath();
 
@@ -395,127 +394,138 @@ public class FileResource extends AbstractJaxRSResource {
     StreamingOutput streamingOutput = null;
 
     try {
-      org.pentaho.platform.plugin.services.importexport.Exporter exporter = new org.pentaho.platform.plugin.services.importexport.Exporter(repository);
-      exporter.setRepoPath(path);
-      exporter.setRepoWs(repoWs);
+      org.pentaho.platform.plugin.services.importexport.Exporter exporter =
+          new org.pentaho.platform.plugin.services.importexport.Exporter( repository );
+      exporter.setRepoPath( path );
+      exporter.setRepoWs( repoWs );
 
-      File zipFile = exporter.doExportAsZip(repositoryFile);
-      is = new FileInputStream(zipFile);
-    } catch (Exception e) {
-      return Response.serverError().entity(e.toString()).build();
+      File zipFile = exporter.doExportAsZip( repositoryFile );
+      is = new FileInputStream( zipFile );
+    } catch ( Exception e ) {
+      return Response.serverError().entity( e.toString() ).build();
     }
 
     streamingOutput = new StreamingOutput() {
-      public void write(OutputStream output) throws IOException {
-        IOUtils.copy(is, output);
+      public void write( OutputStream output ) throws IOException {
+        IOUtils.copy( is, output );
       }
     };
     Response response = null;
-    response = Response.ok(streamingOutput, APPLICATION_ZIP).build();
+    response = Response.ok( streamingOutput, APPLICATION_ZIP ).build();
     return response;
   }
 
   @GET
-  @Path("{pathId : .+}/parameterizable")
-  @Produces(TEXT_PLAIN)
+  @Path( "{pathId : .+}/parameterizable" )
+  @Produces( TEXT_PLAIN )
   // have to accept anything for browsers to work
-  public String doIsParameterizable(@PathParam("pathId") String pathId) throws FileNotFoundException {
+  public
+  String doIsParameterizable( @PathParam( "pathId" ) String pathId ) throws FileNotFoundException {
     boolean hasParameterUi = false;
-    RepositoryFile repositoryFile = getRepository().getFile(FileResource.idToPath(pathId));
-    if (repositoryFile != null) {
+    RepositoryFile repositoryFile = getRepository().getFile( FileResource.idToPath( pathId ) );
+    if ( repositoryFile != null ) {
       try {
-        hasParameterUi = (PentahoSystem.get(IPluginManager.class).getContentGenerator(
-            repositoryFile.getName().substring(repositoryFile.getName().indexOf('.') + 1), "parameterUi") != null);
-      } catch (NoSuchBeanDefinitionException e) {
+        hasParameterUi =
+            ( PentahoSystem.get( IPluginManager.class ).getContentGenerator(
+                repositoryFile.getName().substring( repositoryFile.getName().indexOf( '.' ) + 1 ),
+              "parameterUi" ) != null );
+      } catch ( NoSuchBeanDefinitionException e ) {
         // Do nothing.
       }
     }
     boolean hasParameters = false;
-    if (hasParameterUi) {
+    if ( hasParameterUi ) {
       try {
-        IContentGenerator parameterContentGenerator = PentahoSystem.get(IPluginManager.class).getContentGenerator(
-            repositoryFile.getName().substring(repositoryFile.getName().indexOf('.') + 1), "parameter");
-        if (parameterContentGenerator != null) {
+        IContentGenerator parameterContentGenerator =
+            PentahoSystem.get( IPluginManager.class ).getContentGenerator(
+                repositoryFile.getName().substring( repositoryFile.getName().indexOf( '.' ) + 1 ), "parameter" );
+        if ( parameterContentGenerator != null ) {
           ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-          parameterContentGenerator.setOutputHandler(new SimpleOutputHandler(outputStream, false));
-          parameterContentGenerator.setMessagesList(new ArrayList<String>());
+          parameterContentGenerator.setOutputHandler( new SimpleOutputHandler( outputStream, false ) );
+          parameterContentGenerator.setMessagesList( new ArrayList<String>() );
           Map<String, IParameterProvider> parameterProviders = new HashMap<String, IParameterProvider>();
           SimpleParameterProvider parameterProvider = new SimpleParameterProvider();
-          parameterProvider.setParameter("path", repositoryFile.getPath());
-          parameterProviders.put(IParameterProvider.SCOPE_REQUEST, parameterProvider);
-          parameterContentGenerator.setParameterProviders(parameterProviders);
-          parameterContentGenerator.setSession(PentahoSessionHolder.getSession());
+          parameterProvider.setParameter( "path", repositoryFile.getPath() );
+          parameterProviders.put( IParameterProvider.SCOPE_REQUEST, parameterProvider );
+          parameterContentGenerator.setParameterProviders( parameterProviders );
+          parameterContentGenerator.setSession( PentahoSessionHolder.getSession() );
           parameterContentGenerator.createContent();
-          if (outputStream.size() > 0) {
-            Document document = DocumentHelper.parseText(outputStream.toString());
+          if ( outputStream.size() > 0 ) {
+            Document document = DocumentHelper.parseText( outputStream.toString() );
 
             // exclude all parameters that are of type "system", xactions set system params that have to be ignored.
-            @SuppressWarnings("rawtypes")
-            List nodes = document.selectNodes("parameters/parameter");
-            for (int i = 0; i < nodes.size() && !hasParameters; i++) {
-              Element elem = (Element) nodes.get(i);
-              if (elem.attributeValue("name").equalsIgnoreCase("output-target") && elem.attributeValue("is-mandatory").equalsIgnoreCase("true")) {
+            @SuppressWarnings( "rawtypes" )
+            List nodes = document.selectNodes( "parameters/parameter" );
+            for ( int i = 0; i < nodes.size() && !hasParameters; i++ ) {
+              Element elem = (Element) nodes.get( i );
+              if ( elem.attributeValue( "name" ).equalsIgnoreCase( "output-target" )
+                  && elem.attributeValue( "is-mandatory" ).equalsIgnoreCase( "true" ) ) {
                 hasParameters = true;
                 continue;
               }
-              Element attrib = (Element) elem
-                  .selectSingleNode("attribute[@namespace='http://reporting.pentaho.org/namespaces/engine/parameter-attributes/core' and @name='role']");
-              if (attrib == null || !"system".equals(attrib.attributeValue("value"))) {
+              Element attrib =
+                  (Element) elem
+                      .selectSingleNode(
+                        "attribute[@namespace='http://reporting.pentaho"
+                          + ".org/namespaces/engine/parameter-attributes/core' and @name='role']" );
+              if ( attrib == null || !"system".equals( attrib.attributeValue( "value" ) ) ) {
                 hasParameters = true;
               }
             }
           }
         }
-      } catch (Exception e) {
-        logger.error(Messages.getInstance().getString("FileResource.PARAM_FAILURE", e.getMessage()), e); //$NON-NLS-1$
+      } catch ( Exception e ) {
+        logger.error( Messages.getInstance().getString( "FileResource.PARAM_FAILURE", e.getMessage() ), e ); //$NON-NLS-1$
       }
     }
-    return Boolean.toString(hasParameters);
+    return Boolean.toString( hasParameters );
   }
 
   /**
-   * Compatibility endpoint for browsers since you can't specify Accepts headers in browsers Added path param withManifest to indicate that manifest containing
-   * ACL and metadata should be included
+   * Compatibility endpoint for browsers since you can't specify Accepts headers in browsers Added path param
+   * withManifest to indicate that manifest containing ACL and metadata should be included
    * 
    * @param pathId
    * @return
    * @throws FileNotFoundException
    */
   @GET
-  @Path("{pathId : .+}/download")
-  @Produces(WILDCARD)
+  @Path( "{pathId : .+}/download" )
+  @Produces( WILDCARD )
   // have to accept anything for browsers to work
-  public Response doGetFileOrDirAsDownload(@PathParam("pathId") String pathId, @QueryParam("withManifest") String strWithManifest) throws FileNotFoundException {
-    
+  public
+  Response doGetFileOrDirAsDownload( @PathParam( "pathId" ) String pathId,
+        @QueryParam( "withManifest" ) String strWithManifest ) throws FileNotFoundException {
+
     // you have to have PublishAction in order to download
-    if (getPolicy().isAllowed(PublishAction.NAME) == false) {
-      return Response.status(FORBIDDEN).build();
+    if ( getPolicy().isAllowed( PublishAction.NAME ) == false ) {
+      return Response.status( FORBIDDEN ).build();
     }
-    
+
     String quotedFileName = null;
 
     // send zip with manifest by default
-    boolean withManifest = "false".equals(strWithManifest) ? false : true;
+    boolean withManifest = "false".equals( strWithManifest ) ? false : true;
 
     // change file id to path
-    String path = idToPath(pathId);
+    String path = idToPath( pathId );
 
     // if no path is sent, return bad request
-    if (StringUtils.isEmpty(pathId)) {
-      return Response.status(BAD_REQUEST).build();
+    if ( StringUtils.isEmpty( pathId ) ) {
+      return Response.status( BAD_REQUEST ).build();
     }
 
     // check if path is valid
-    if (!isPathValid(path)) {
-      return Response.status(FORBIDDEN).build();
+    if ( !isPathValid( path ) ) {
+      return Response.status( FORBIDDEN ).build();
     }
 
     // check if entity exists in repo
-    RepositoryFile repositoryFile = getRepository().getFile(path);
+    RepositoryFile repositoryFile = getRepository().getFile( path );
 
-    if (repositoryFile == null) {
+    if ( repositoryFile == null ) {
       // file does not exist or is not readable but we can't tell at this point
-      return Response.status(NOT_FOUND).build();
+      return Response.status( NOT_FOUND ).build();
     }
 
     try {
@@ -525,72 +535,77 @@ public class FileResource extends AbstractJaxRSResource {
       BaseExportProcessor exportProcessor;
 
       // create processor
-      if (repositoryFile.isFolder() || withManifest) {
-        exportProcessor = new ZipExportProcessor(path, FileResource.repository, withManifest);
+      if ( repositoryFile.isFolder() || withManifest ) {
+        exportProcessor = new ZipExportProcessor( path, FileResource.repository, withManifest );
         quotedFileName = "\"" + repositoryFile.getName() + ".zip\""; //$NON-NLS-1$//$NON-NLS-2$
       } else {
-        exportProcessor = new SimpleExportProcessor(path, FileResource.repository, withManifest);
+        exportProcessor = new SimpleExportProcessor( path, FileResource.repository, withManifest );
         quotedFileName = "\"" + repositoryFile.getName() + "\""; //$NON-NLS-1$//$NON-NLS-2$
       }
 
       // add export handlers for each expected file type
-      exportProcessor.addExportHandler(PentahoSystem.get(DefaultExportHandler.class));
+      exportProcessor.addExportHandler( PentahoSystem.get( DefaultExportHandler.class ) );
 
-      File zipFile = exportProcessor.performExport(repositoryFile);
-      is = new FileInputStream(zipFile);
+      File zipFile = exportProcessor.performExport( repositoryFile );
+      is = new FileInputStream( zipFile );
 
       // copy streaming output
       streamingOutput = new StreamingOutput() {
-        public void write(OutputStream output) throws IOException {
-          IOUtils.copy(is, output);
+        public void write( OutputStream output ) throws IOException {
+          IOUtils.copy( is, output );
         }
       };
 
       // create response
-      response = Response.ok(streamingOutput, APPLICATION_ZIP).header("Content-Disposition", "attachment; filename=" + quotedFileName).build();
+      response =
+          Response.ok( streamingOutput, APPLICATION_ZIP ).header( "Content-Disposition",
+            "attachment; filename=" + quotedFileName ).build();
 
       return response;
-    } catch (Exception e) {
-      logger.error(Messages.getInstance().getString("FileResource.EXPORT_FAILED", quotedFileName + " " + e.getMessage()), e); //$NON-NLS-1$
-      return Response.status(INTERNAL_SERVER_ERROR).build();
+    } catch ( Exception e ) {
+      logger.error( Messages.getInstance().getString(
+        "FileResource.EXPORT_FAILED", quotedFileName + " " + e.getMessage() ), e ); //$NON-NLS-1$
+      return Response.status( INTERNAL_SERVER_ERROR ).build();
     }
 
   }
 
   @GET
-  @Path("{pathId : .+}/inline")
-  @Produces(WILDCARD)
+  @Path( "{pathId : .+}/inline" )
+  @Produces( WILDCARD )
   // have to accept anything for browsers to work
-  public Response doGetFileAsInline(@PathParam("pathId") String pathId) throws FileNotFoundException {
-  	String path = null;
-  	RepositoryFile repositoryFile = null;
-  	// Check if the path is actually and ID
-  	if(isPath(pathId)) {
-  		path = idToPath(pathId);
-      if (!isPathValid(path)) {
-        return Response.status(FORBIDDEN).build();
+  public
+  Response doGetFileAsInline( @PathParam( "pathId" ) String pathId ) throws FileNotFoundException {
+    String path = null;
+    RepositoryFile repositoryFile = null;
+    // Check if the path is actually and ID
+    if ( isPath( pathId ) ) {
+      path = idToPath( pathId );
+      if ( !isPathValid( path ) ) {
+        return Response.status( FORBIDDEN ).build();
       }
-      repositoryFile = getRepository().getFile(path);
-  	} else {
-  		// Yes path provided is an ID
-  		repositoryFile = getRepository().getFileById(pathId);
-  	}
+      repositoryFile = getRepository().getFile( path );
+    } else {
+      // Yes path provided is an ID
+      repositoryFile = getRepository().getFileById( pathId );
+    }
 
-    if (repositoryFile == null) {
-        // file does not exist or is not readable but we can't tell at this point
-        return Response.status(NOT_FOUND).build();
+    if ( repositoryFile == null ) {
+      // file does not exist or is not readable but we can't tell at this point
+      return Response.status( NOT_FOUND ).build();
     }
-    
+
     // check whitelist acceptance of file (based on extension)
-    if (getWhitelist().accept(repositoryFile.getName()) == false) {
+    if ( getWhitelist().accept( repositoryFile.getName() ) == false ) {
       // if whitelist check fails, we can still inline if you have PublishAction, otherwise we're FORBIDDEN
-      if (getPolicy().isAllowed(PublishAction.NAME) == false) {
-        return Response.status(FORBIDDEN).build();
+      if ( getPolicy().isAllowed( PublishAction.NAME ) == false ) {
+        return Response.status( FORBIDDEN ).build();
       }
     }
-    
+
     try {
-      SimpleRepositoryFileData fileData = getRepository().getDataForRead(repositoryFile.getId(), SimpleRepositoryFileData.class);
+      SimpleRepositoryFileData fileData =
+          getRepository().getDataForRead( repositoryFile.getId(), SimpleRepositoryFileData.class );
       final InputStream is = fileData.getInputStream();
 
       StreamingOutput streamingOutput;
@@ -598,43 +613,46 @@ public class FileResource extends AbstractJaxRSResource {
 
       // copy streaming output
       streamingOutput = new StreamingOutput() {
-        public void write(OutputStream output) throws IOException {
-          IOUtils.copy(is, output);
+        public void write( OutputStream output ) throws IOException {
+          IOUtils.copy( is, output );
         }
       };
 
       // create response
-      response = Response.ok(streamingOutput).header("Content-Disposition", "inline; filename=" + repositoryFile.getName()).build();
+      response =
+          Response.ok( streamingOutput ).header( "Content-Disposition", "inline; filename=" + repositoryFile.getName() )
+              .build();
 
       return response;
-    } catch (Exception e) {
-      logger.error(Messages.getInstance().getString("FileResource.EXPORT_FAILED", repositoryFile.getName() + " " + e.getMessage()), e); //$NON-NLS-1$
-      return Response.status(INTERNAL_SERVER_ERROR).build();
+    } catch ( Exception e ) {
+      logger.error( Messages.getInstance().getString(
+        "FileResource.EXPORT_FAILED", repositoryFile.getName() + " " + e.getMessage() ), e ); //$NON-NLS-1$
+      return Response.status( INTERNAL_SERVER_ERROR ).build();
     }
 
   }
 
   @PUT
-  @Path("{pathId : .+}/acl")
-  @Consumes({ APPLICATION_XML, APPLICATION_JSON })
-  public Response setFileAcls(@PathParam("pathId") String pathId, RepositoryFileAclDto acl) {
-    RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-    acl.setId(file.getId());
-    getRepoWs().updateAcl(acl);
+  @Path( "{pathId : .+}/acl" )
+  @Consumes( { APPLICATION_XML, APPLICATION_JSON } )
+  public Response setFileAcls( @PathParam( "pathId" ) String pathId, RepositoryFileAclDto acl ) {
+    RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+    acl.setId( file.getId() );
+    getRepoWs().updateAcl( acl );
     return Response.ok().build();
   }
 
   @PUT
-  @Path("{pathId : .+}/creator")
-  @Consumes({ APPLICATION_XML, APPLICATION_JSON })
-  public Response setContentCreator(@PathParam("pathId") String pathId, RepositoryFileDto contentCreator) {
+  @Path( "{pathId : .+}/creator" )
+  @Consumes( { APPLICATION_XML, APPLICATION_JSON } )
+  public Response setContentCreator( @PathParam( "pathId" ) String pathId, RepositoryFileDto contentCreator ) {
     try {
-      RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-      Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(file.getId());
-      fileMetadata.put(PentahoJcrConstants.PHO_CONTENTCREATOR, contentCreator.getId());
-      getRepository().setFileMetadata(file.getId(), fileMetadata);
+      RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+      Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( file.getId() );
+      fileMetadata.put( PentahoJcrConstants.PHO_CONTENTCREATOR, contentCreator.getId() );
+      getRepository().setFileMetadata( file.getId(), fileMetadata );
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       return Response.serverError().build();
     }
   }
@@ -643,31 +661,32 @@ public class FileResource extends AbstractJaxRSResource {
   // LOCALES
 
   @GET
-  @Path("{pathId : .+}/locales")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<LocaleMapDto> doGetFileLocales(@PathParam("pathId") String pathId) {
+  @Path( "{pathId : .+}/locales" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<LocaleMapDto> doGetFileLocales( @PathParam( "pathId" ) String pathId ) {
     List<LocaleMapDto> availableLocales = new ArrayList<LocaleMapDto>();
-    RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-    List<PentahoLocale> locales = getRepoWs().getAvailableLocalesForFileById(file.getId());
-    if (locales != null && !locales.isEmpty()) {
-      for (PentahoLocale locale : locales) {
-        availableLocales.add(new LocaleMapDto(locale.toString(), null));
+    RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+    List<PentahoLocale> locales = getRepoWs().getAvailableLocalesForFileById( file.getId() );
+    if ( locales != null && !locales.isEmpty() ) {
+      for ( PentahoLocale locale : locales ) {
+        availableLocales.add( new LocaleMapDto( locale.toString(), null ) );
       }
     }
     return availableLocales;
   }
 
   @GET
-  @Path("{pathId : .+}/localeProperties")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<StringKeyStringValueDto> doGetLocaleProperties(@PathParam("pathId") String pathId, @QueryParam("locale") String locale) {
-    RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
+  @Path( "{pathId : .+}/localeProperties" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<StringKeyStringValueDto> doGetLocaleProperties( @PathParam( "pathId" ) String pathId,
+      @QueryParam( "locale" ) String locale ) {
+    RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
     List<StringKeyStringValueDto> keyValueList = new ArrayList<StringKeyStringValueDto>();
-    if (file != null) {
-      Properties properties = getRepoWs().getLocalePropertiesForFileById(file.getId(), locale);
-      if (properties != null && !properties.isEmpty()) {
-        for (String key : properties.stringPropertyNames()) {
-          keyValueList.add(new StringKeyStringValueDto(key, properties.getProperty(key)));
+    if ( file != null ) {
+      Properties properties = getRepoWs().getLocalePropertiesForFileById( file.getId(), locale );
+      if ( properties != null && !properties.isEmpty() ) {
+        for ( String key : properties.stringPropertyNames() ) {
+          keyValueList.add( new StringKeyStringValueDto( key, properties.getProperty( key ) ) );
         }
       }
     }
@@ -675,35 +694,36 @@ public class FileResource extends AbstractJaxRSResource {
   }
 
   @PUT
-  @Path("{pathId : .+}/localeProperties")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public Response doSetLocaleProperties(@PathParam("pathId") String pathId, @QueryParam("locale") String locale, List<StringKeyStringValueDto> properties) {
+  @Path( "{pathId : .+}/localeProperties" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public Response doSetLocaleProperties( @PathParam( "pathId" ) String pathId, @QueryParam( "locale" ) String locale,
+      List<StringKeyStringValueDto> properties ) {
     try {
-      RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
+      RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
       Properties fileProperties = new Properties();
-      if (properties != null && !properties.isEmpty()) {
-        for (StringKeyStringValueDto dto : properties) {
-          fileProperties.put(dto.getKey(), dto.getValue());
+      if ( properties != null && !properties.isEmpty() ) {
+        for ( StringKeyStringValueDto dto : properties ) {
+          fileProperties.put( dto.getKey(), dto.getValue() );
         }
       }
-      getRepoWs().setLocalePropertiesForFileByFileId(file.getId(), locale, fileProperties);
+      getRepoWs().setLocalePropertiesForFileByFileId( file.getId(), locale, fileProperties );
 
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       return Response.serverError().build();
     }
   }
 
   @PUT
-  @Path("{pathId : .+}/deleteLocale")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public Response doDeleteLocale(@PathParam("pathId") String pathId, @QueryParam("locale") String locale) {
+  @Path( "{pathId : .+}/deleteLocale" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public Response doDeleteLocale( @PathParam( "pathId" ) String pathId, @QueryParam( "locale" ) String locale ) {
     try {
-      RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-      getRepoWs().deleteLocalePropertiesForFile(file.getId(), locale);
+      RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+      getRepoWs().deleteLocalePropertiesForFile( file.getId(), locale );
 
       return Response.ok().build();
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       return Response.serverError().build();
     }
   }
@@ -712,132 +732,135 @@ public class FileResource extends AbstractJaxRSResource {
   // PROPERTIES
 
   @GET
-  @Path("/properties")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
+  @Path( "/properties" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
   public RepositoryFileDto doGetRootProperties() {
-    return getRepoWs().getFile(PATH_SEPARATOR);
+    return getRepoWs().getFile( PATH_SEPARATOR );
   }
 
   @GET
-  @Path("{pathId : .+}/canAccessMap")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<Setting> doGetCanAccessList(@PathParam("pathId") String pathId, @QueryParam("permissions") String permissions) {
-    StringTokenizer tokenizer = new StringTokenizer(permissions, "|");
+  @Path( "{pathId : .+}/canAccessMap" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<Setting> doGetCanAccessList( @PathParam( "pathId" ) String pathId,
+      @QueryParam( "permissions" ) String permissions ) {
+    StringTokenizer tokenizer = new StringTokenizer( permissions, "|" );
     ArrayList<Setting> permMap = new ArrayList<Setting>();
-    while (tokenizer.hasMoreTokens()) {
-      Integer perm = Integer.valueOf(tokenizer.nextToken());
-      EnumSet<RepositoryFilePermission> permission = EnumSet.of(RepositoryFilePermission.values()[perm]);
-      permMap.add(new Setting(perm.toString(), new Boolean(getRepository().hasAccess(idToPath(pathId), permission)).toString()));
+    while ( tokenizer.hasMoreTokens() ) {
+      Integer perm = Integer.valueOf( tokenizer.nextToken() );
+      EnumSet<RepositoryFilePermission> permission = EnumSet.of( RepositoryFilePermission.values()[perm] );
+      permMap.add( new Setting( perm.toString(), new Boolean( getRepository()
+          .hasAccess( idToPath( pathId ), permission ) ).toString() ) );
     }
     return permMap;
   }
 
   @GET
-  @Path("{pathId : .+}/canAccess")
-  @Produces(TEXT_PLAIN)
-  public String doGetCanAccess(@PathParam("pathId") String pathId, @QueryParam("permissions") String permissions) {
-    StringTokenizer tokenizer = new StringTokenizer(permissions, "|");
+  @Path( "{pathId : .+}/canAccess" )
+  @Produces( TEXT_PLAIN )
+  public String doGetCanAccess( @PathParam( "pathId" ) String pathId,
+                                @QueryParam( "permissions" ) String permissions ) {
+    StringTokenizer tokenizer = new StringTokenizer( permissions, "|" );
     List<Integer> permissionList = new ArrayList<Integer>();
-    while (tokenizer.hasMoreTokens()) {
-      Integer perm = Integer.valueOf(tokenizer.nextToken());
-      switch (perm) {
-      case 0: {
-        permissionList.add(RepositoryFilePermission.READ.ordinal());
-        break;
-      }
-      case 1: {
-        permissionList.add(RepositoryFilePermission.WRITE.ordinal());
-        break;
-      }
-      case 2: {
-        permissionList.add(RepositoryFilePermission.DELETE.ordinal());
-        break;
-      }
-      case 3: {
-        permissionList.add(RepositoryFilePermission.ACL_MANAGEMENT.ordinal());
-        break;
-      }
-      case 4: {
-        permissionList.add(RepositoryFilePermission.ALL.ordinal());
-        break;
-      }
+    while ( tokenizer.hasMoreTokens() ) {
+      Integer perm = Integer.valueOf( tokenizer.nextToken() );
+      switch ( perm ) {
+        case 0: {
+          permissionList.add( RepositoryFilePermission.READ.ordinal() );
+          break;
+        }
+        case 1: {
+          permissionList.add( RepositoryFilePermission.WRITE.ordinal() );
+          break;
+        }
+        case 2: {
+          permissionList.add( RepositoryFilePermission.DELETE.ordinal() );
+          break;
+        }
+        case 3: {
+          permissionList.add( RepositoryFilePermission.ACL_MANAGEMENT.ordinal() );
+          break;
+        }
+        case 4: {
+          permissionList.add( RepositoryFilePermission.ALL.ordinal() );
+          break;
+        }
       }
     }
-    return getRepoWs().hasAccess(idToPath(pathId), permissionList) ? "true" : "false";
+    return getRepoWs().hasAccess( idToPath( pathId ), permissionList ) ? "true" : "false";
   }
 
   @GET
-  @Path("/canAdminister")
-  @Produces(TEXT_PLAIN)
+  @Path( "/canAdminister" )
+  @Produces( TEXT_PLAIN )
   public String doGetCanAdminister() {
-    return getPolicy().isAllowed(RepositoryReadAction.NAME) && getPolicy().isAllowed(RepositoryCreateAction.NAME) && getPolicy().isAllowed(AdministerSecurityAction.NAME) ? "true" : "false"; //$NON-NLS-1$//$NON-NLS-2$
-  }
-
-
-    @GET
-    @Path("/canCreate")
-    @Produces(TEXT_PLAIN)
-    public String doGetCanCreate() {
-        return getPolicy().isAllowed(RepositoryCreateAction.NAME)? "true" : "false"; //$NON-NLS-1$//$NON-NLS-2$
+    return getPolicy().isAllowed( RepositoryReadAction.NAME ) && getPolicy().isAllowed( RepositoryCreateAction.NAME )
+        && getPolicy().isAllowed( AdministerSecurityAction.NAME ) ? "true" : "false"; //$NON-NLS-1$//$NON-NLS-2$
   }
 
   @GET
-  @Path("{pathId : .+}/acl")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public RepositoryFileAclDto doGetFileAcl(@PathParam("pathId") String pathId) {
-    RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-    RepositoryFileAclDto fileAcl = getRepoWs().getAcl(file.getId());
-    if (fileAcl.isEntriesInheriting()) {
-      List<RepositoryFileAclAceDto> aces = getRepoWs().getEffectiveAces(file.getId());
-      fileAcl.setAces(aces, fileAcl.isEntriesInheriting());
+  @Path( "/canCreate" )
+  @Produces( TEXT_PLAIN )
+  public String doGetCanCreate() {
+    return getPolicy().isAllowed( RepositoryCreateAction.NAME ) ? "true" : "false"; //$NON-NLS-1$//$NON-NLS-2$
+  }
+
+  @GET
+  @Path( "{pathId : .+}/acl" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public RepositoryFileAclDto doGetFileAcl( @PathParam( "pathId" ) String pathId ) {
+    RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+    RepositoryFileAclDto fileAcl = getRepoWs().getAcl( file.getId() );
+    if ( fileAcl.isEntriesInheriting() ) {
+      List<RepositoryFileAclAceDto> aces = getRepoWs().getEffectiveAces( file.getId() );
+      fileAcl.setAces( aces, fileAcl.isEntriesInheriting() );
     }
     return fileAcl;
   }
 
   @GET
-  @Path("{pathId : .+}/properties")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public RepositoryFileDto doGetProperties(@PathParam("pathId") String pathId) {
-    return getRepoWs().getFile(idToPath(pathId));
+  @Path( "{pathId : .+}/properties" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public RepositoryFileDto doGetProperties( @PathParam( "pathId" ) String pathId ) {
+    return getRepoWs().getFile( idToPath( pathId ) );
   }
 
   @GET
-  @Path("{pathId : .+}/creator")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public RepositoryFileDto doGetContentCreator(@PathParam("pathId") String pathId) {
+  @Path( "{pathId : .+}/creator" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public RepositoryFileDto doGetContentCreator( @PathParam( "pathId" ) String pathId ) {
     try {
-      RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-      Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(file.getId());
-      String creatorId = (String) fileMetadata.get(PentahoJcrConstants.PHO_CONTENTCREATOR);
-      if (creatorId != null && creatorId.length() > 0) {
-        return getRepoWs().getFileById(creatorId);
+      RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+      Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( file.getId() );
+      String creatorId = (String) fileMetadata.get( PentahoJcrConstants.PHO_CONTENTCREATOR );
+      if ( creatorId != null && creatorId.length() > 0 ) {
+        return getRepoWs().getFileById( creatorId );
       } else {
         return null;
       }
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       return null;
     }
   }
 
   @GET
-  @Path("{pathId : .+}/generatedContent")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<RepositoryFileDto> doGetGeneratedContent(@PathParam("pathId") String pathId) {
-    RepositoryFileDto targetFile = doGetProperties(pathId);
+  @Path( "{pathId : .+}/generatedContent" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<RepositoryFileDto> doGetGeneratedContent( @PathParam( "pathId" ) String pathId ) {
+    RepositoryFileDto targetFile = doGetProperties( pathId );
     List<RepositoryFileDto> content = new ArrayList<RepositoryFileDto>();
-    if (targetFile != null) {
+    if ( targetFile != null ) {
       String targetFileId = targetFile.getId();
       SessionResource sessionResource = new SessionResource();
 
-      RepositoryFile workspaceFolder = getRepository().getFile(sessionResource.doGetCurrentUserDir());
-      if (workspaceFolder != null) {
-        List<RepositoryFile> children = getRepository().getChildren(workspaceFolder.getId());
-        for (RepositoryFile child : children) {
-          if (!child.isFolder()) {
-            Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(child.getId());
-            String creatorId = (String) fileMetadata.get(PentahoJcrConstants.PHO_CONTENTCREATOR);
-            if (creatorId != null && creatorId.equals(targetFileId)) {
-              content.add(RepositoryFileAdapter.toFileDto(child));
+      RepositoryFile workspaceFolder = getRepository().getFile( sessionResource.doGetCurrentUserDir() );
+      if ( workspaceFolder != null ) {
+        List<RepositoryFile> children = getRepository().getChildren( workspaceFolder.getId() );
+        for ( RepositoryFile child : children ) {
+          if ( !child.isFolder() ) {
+            Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( child.getId() );
+            String creatorId = (String) fileMetadata.get( PentahoJcrConstants.PHO_CONTENTCREATOR );
+            if ( creatorId != null && creatorId.equals( targetFileId ) ) {
+              content.add( RepositoryFileAdapter.toFileDto( child ) );
             }
           }
         }
@@ -847,24 +870,25 @@ public class FileResource extends AbstractJaxRSResource {
   }
 
   @GET
-  @Path("{pathId : .+}/generatedContentForUser")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<RepositoryFileDto> doGetGeneratedContentForUser(@PathParam("pathId") String pathId, @QueryParam("user") String user) {
-    RepositoryFileDto targetFile = doGetProperties(pathId);
+  @Path( "{pathId : .+}/generatedContentForUser" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<RepositoryFileDto> doGetGeneratedContentForUser( @PathParam( "pathId" ) String pathId,
+      @QueryParam( "user" ) String user ) {
+    RepositoryFileDto targetFile = doGetProperties( pathId );
     List<RepositoryFileDto> content = new ArrayList<RepositoryFileDto>();
-    if (targetFile != null) {
+    if ( targetFile != null ) {
       String targetFileId = targetFile.getId();
       SessionResource sessionResource = new SessionResource();
 
-      RepositoryFile workspaceFolder = getRepository().getFile(sessionResource.doGetUserDir(user));
-      if (workspaceFolder != null) {
-        List<RepositoryFile> children = getRepository().getChildren(workspaceFolder.getId());
-        for (RepositoryFile child : children) {
-          if (!child.isFolder()) {
-            Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(child.getId());
-            String creatorId = (String) fileMetadata.get(PentahoJcrConstants.PHO_CONTENTCREATOR);
-            if (creatorId != null && creatorId.equals(targetFileId)) {
-              content.add(RepositoryFileAdapter.toFileDto(child));
+      RepositoryFile workspaceFolder = getRepository().getFile( sessionResource.doGetUserDir( user ) );
+      if ( workspaceFolder != null ) {
+        List<RepositoryFile> children = getRepository().getChildren( workspaceFolder.getId() );
+        for ( RepositoryFile child : children ) {
+          if ( !child.isFolder() ) {
+            Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( child.getId() );
+            String creatorId = (String) fileMetadata.get( PentahoJcrConstants.PHO_CONTENTCREATOR );
+            if ( creatorId != null && creatorId.equals( targetFileId ) ) {
+              content.add( RepositoryFileAdapter.toFileDto( child ) );
             }
           }
         }
@@ -874,20 +898,20 @@ public class FileResource extends AbstractJaxRSResource {
   }
 
   @GET
-  @Path("/generatedContentForSchedule")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public List<RepositoryFileDto> doGetGeneratedContentForSchedule(@QueryParam("lineageId") String lineageId) {
+  @Path( "/generatedContentForSchedule" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public List<RepositoryFileDto> doGetGeneratedContentForSchedule( @QueryParam( "lineageId" ) String lineageId ) {
     List<RepositoryFileDto> content = new ArrayList<RepositoryFileDto>();
     SessionResource sessionResource = new SessionResource();
-    RepositoryFile workspaceFolder = getRepository().getFile(sessionResource.doGetCurrentUserDir());
-    if (workspaceFolder != null) {
-      List<RepositoryFile> children = getRepository().getChildren(workspaceFolder.getId());
-      for (RepositoryFile child : children) {
-        if (!child.isFolder()) {
-          Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(child.getId());
-          String lineageIdMeta = (String) fileMetadata.get(QuartzScheduler.RESERVEDMAPKEY_LINEAGE_ID);
-          if (lineageIdMeta != null && lineageIdMeta.equals(lineageId)) {
-            content.add(RepositoryFileAdapter.toFileDto(child));
+    RepositoryFile workspaceFolder = getRepository().getFile( sessionResource.doGetCurrentUserDir() );
+    if ( workspaceFolder != null ) {
+      List<RepositoryFile> children = getRepository().getChildren( workspaceFolder.getId() );
+      for ( RepositoryFile child : children ) {
+        if ( !child.isFolder() ) {
+          Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( child.getId() );
+          String lineageIdMeta = (String) fileMetadata.get( QuartzScheduler.RESERVEDMAPKEY_LINEAGE_ID );
+          if ( lineageIdMeta != null && lineageIdMeta.equals( lineageId ) ) {
+            content.add( RepositoryFileAdapter.toFileDto( child ) );
           }
         }
       }
@@ -899,183 +923,189 @@ public class FileResource extends AbstractJaxRSResource {
   // BROWSE
 
   @GET
-  @Path("/children")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public RepositoryFileTreeDto doGetRootChildren(@QueryParam("depth") Integer depth, @QueryParam("filter") String filter,
-      @QueryParam("showHidden") Boolean showHidden) {
-    return doGetChildren(PATH_SEPARATOR, depth, filter, showHidden);
+  @Path( "/children" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public RepositoryFileTreeDto doGetRootChildren( @QueryParam( "depth" ) Integer depth,
+      @QueryParam( "filter" ) String filter, @QueryParam( "showHidden" ) Boolean showHidden ) {
+    return doGetChildren( PATH_SEPARATOR, depth, filter, showHidden );
   }
 
   @GET
-  @Path("{pathId : .+}/children")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public RepositoryFileTreeDto doGetChildren(@PathParam("pathId") String pathId, @QueryParam("depth") Integer depth, @QueryParam("filter") String filter,
-      @QueryParam("showHidden") Boolean showHidden) {
+  @Path( "{pathId : .+}/children" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public RepositoryFileTreeDto doGetChildren( @PathParam( "pathId" ) String pathId,
+      @QueryParam( "depth" ) Integer depth, @QueryParam( "filter" ) String filter,
+      @QueryParam( "showHidden" ) Boolean showHidden ) {
 
     String path = null;
-    if (filter == null) {
+    if ( filter == null ) {
       filter = "*"; //$NON-NLS-1$
     }
-    if (depth == null) {
+    if ( depth == null ) {
       depth = -1; // search all
     }
-    if (pathId == null || pathId.equals(PATH_SEPARATOR)) {
+    if ( pathId == null || pathId.equals( PATH_SEPARATOR ) ) {
       path = PATH_SEPARATOR;
     } else {
-      if (!pathId.startsWith(PATH_SEPARATOR)) {
-        path = idToPath(pathId);
+      if ( !pathId.startsWith( PATH_SEPARATOR ) ) {
+        path = idToPath( pathId );
       }
     }
-    if (showHidden == null) {
+    if ( showHidden == null ) {
       showHidden = Boolean.FALSE;
     }
 
     List<RepositoryFileTreeDto> filteredChildren = new ArrayList<RepositoryFileTreeDto>();
-    RepositoryFileTreeDto tree = getRepoWs().getTree(path, depth, filter, showHidden.booleanValue());
+    RepositoryFileTreeDto tree = getRepoWs().getTree( path, depth, filter, showHidden.booleanValue() );
 
     // BISERVER-9599 - Use special sort order
-    Collator collator = Collator.getInstance(PentahoSessionHolder.getSession().getLocale());
-    collator.setStrength(Collator.PRIMARY); // ignore case
-    sortByLocaleTitle(collator, tree);
+    Collator collator = Collator.getInstance( PentahoSessionHolder.getSession().getLocale() );
+    collator.setStrength( Collator.PRIMARY ); // ignore case
+    sortByLocaleTitle( collator, tree );
 
-    for (RepositoryFileTreeDto child : tree.getChildren()) {
+    for ( RepositoryFileTreeDto child : tree.getChildren() ) {
       RepositoryFileDto file = child.getFile();
-      Map<String, Serializable> fileMeta = getRepository().getFileMetadata(file.getId());
-      boolean isSystemFolder = fileMeta.containsKey(IUnifiedRepository.SYSTEM_FOLDER) ? (Boolean) fileMeta.get(IUnifiedRepository.SYSTEM_FOLDER) : false;
-      if (!isSystemFolder) {
-        filteredChildren.add(child);
+      Map<String, Serializable> fileMeta = getRepository().getFileMetadata( file.getId() );
+      boolean isSystemFolder =
+          fileMeta.containsKey( IUnifiedRepository.SYSTEM_FOLDER ) ? (Boolean) fileMeta
+              .get( IUnifiedRepository.SYSTEM_FOLDER ) : false;
+      if ( !isSystemFolder ) {
+        filteredChildren.add( child );
       }
     }
-    tree.setChildren(filteredChildren);
+    tree.setChildren( filteredChildren );
     return tree;
   }
 
   @GET
-  @Path("/deleted")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
+  @Path( "/deleted" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
   public List<RepositoryFileDto> doGetDeletedFiles() {
     return getRepoWs().getDeletedFiles();
   }
 
   @GET
-  @Path("{pathId : .+}/metadata")
-  @Produces({ APPLICATION_JSON })
-  public List<StringKeyStringValueDto> doGetMetadata(@PathParam("pathId") String pathId) {
+  @Path( "{pathId : .+}/metadata" )
+  @Produces( { APPLICATION_JSON } )
+  public List<StringKeyStringValueDto> doGetMetadata( @PathParam( "pathId" ) String pathId ) {
     List<StringKeyStringValueDto> list = null;
     String path = null;
-    if (pathId == null || pathId.equals(PATH_SEPARATOR)) {
+    if ( pathId == null || pathId.equals( PATH_SEPARATOR ) ) {
       path = PATH_SEPARATOR;
     } else {
-      if (!pathId.startsWith(PATH_SEPARATOR)) {
-        path = idToPath(pathId);
+      if ( !pathId.startsWith( PATH_SEPARATOR ) ) {
+        path = idToPath( pathId );
       }
     }
-    final RepositoryFileDto file = getRepoWs().getFile(path);
-    if (file != null) {
-      list = getRepoWs().getFileMetadata(file.getId());
+    final RepositoryFileDto file = getRepoWs().getFile( path );
+    if ( file != null ) {
+      list = getRepoWs().getFileMetadata( file.getId() );
     }
-    if (list != null) {
+    if ( list != null ) {
       boolean hasSchedulable = false;
-      for (StringKeyStringValueDto value : list) {
-        if (value.getKey().equals("_PERM_SCHEDULABLE")) {
+      for ( StringKeyStringValueDto value : list ) {
+        if ( value.getKey().equals( "_PERM_SCHEDULABLE" ) ) {
           hasSchedulable = true;
           break;
         }
       }
-      if (!hasSchedulable) {
-        StringKeyStringValueDto schedPerm = new StringKeyStringValueDto("_PERM_SCHEDULABLE", "true");
-        list.add(schedPerm);
+      if ( !hasSchedulable ) {
+        StringKeyStringValueDto schedPerm = new StringKeyStringValueDto( "_PERM_SCHEDULABLE", "true" );
+        list.add( schedPerm );
       }
 
       // check file object for hidden value and add it to the list
-      list.add(new StringKeyStringValueDto("_PERM_HIDDEN", String.valueOf(file.isHidden())));
+      list.add( new StringKeyStringValueDto( "_PERM_HIDDEN", String.valueOf( file.isHidden() ) ) );
     }
 
     return list;
   }
 
-  
   @PUT
-  @Path("{pathId : .+}/rename")
-  @Consumes({ WILDCARD })
-  @Produces({ WILDCARD })
-  public Response doRename(@PathParam("pathId") String pathId, @QueryParam("newName") String newName) {
+  @Path( "{pathId : .+}/rename" )
+  @Consumes( { WILDCARD } )
+  @Produces( { WILDCARD } )
+  public Response doRename( @PathParam( "pathId" ) String pathId, @QueryParam( "newName" ) String newName ) {
     try {
-      RepositoryFileDto fileToBeRenamed = getRepoWs().getFile(idToPath(pathId));
-      StringBuilder buf = new StringBuilder(fileToBeRenamed.getPath().length());
-      buf.append(getParentPath(fileToBeRenamed.getPath()));
-      buf.append(RepositoryFile.SEPARATOR);
-      buf.append(newName);
-      String extension = getExtension(fileToBeRenamed.getName());
-      if(extension != null) {
-    	  buf.append(extension);  
+      RepositoryFileDto fileToBeRenamed = getRepoWs().getFile( idToPath( pathId ) );
+      StringBuilder buf = new StringBuilder( fileToBeRenamed.getPath().length() );
+      buf.append( getParentPath( fileToBeRenamed.getPath() ) );
+      buf.append( RepositoryFile.SEPARATOR );
+      buf.append( newName );
+      String extension = getExtension( fileToBeRenamed.getName() );
+      if ( extension != null ) {
+        buf.append( extension );
       }
-      getRepoWs().moveFile(fileToBeRenamed.getId(), buf.toString(), "Renaming the file");
+      getRepoWs().moveFile( fileToBeRenamed.getId(), buf.toString(), "Renaming the file" );
       return Response.ok().build();
-    } catch (Throwable t) {
-    	 return processErrorResponse(t.getLocalizedMessage());
+    } catch ( Throwable t ) {
+      return processErrorResponse( t.getLocalizedMessage() );
     }
   }
-  
-  private Response processErrorResponse(String errMessage) {
-	    return Response.ok(errMessage).build();
+
+  private Response processErrorResponse( String errMessage ) {
+    return Response.ok( errMessage ).build();
   }
-  
-  private  String getParentPath(final String path) {
-	    if (path == null) {
-	      throw new IllegalArgumentException();
-	    } else if (RepositoryFile.SEPARATOR.equals(path)) {
-	      return null;
-	    }
-	    int lastSlashIndex = path.lastIndexOf(RepositoryFile.SEPARATOR);
-	    if (lastSlashIndex == 0) {
-	      return RepositoryFile.SEPARATOR;
-	    } else if (lastSlashIndex > 0) {
-	      return path.substring(0, lastSlashIndex);
-	    } else {
-	      throw new IllegalArgumentException();
-	    }
+
+  private String getParentPath( final String path ) {
+    if ( path == null ) {
+      throw new IllegalArgumentException();
+    } else if ( RepositoryFile.SEPARATOR.equals( path ) ) {
+      return null;
+    }
+    int lastSlashIndex = path.lastIndexOf( RepositoryFile.SEPARATOR );
+    if ( lastSlashIndex == 0 ) {
+      return RepositoryFile.SEPARATOR;
+    } else if ( lastSlashIndex > 0 ) {
+      return path.substring( 0, lastSlashIndex );
+    } else {
+      throw new IllegalArgumentException();
+    }
   }
-  
-  private String getExtension(final String name) {
-	  int startIndex = name.lastIndexOf('.');
-	  if(startIndex >= 0) {
-		  return name.substring(startIndex, name.length());  
-	  }
-	  return null;
+
+  private String getExtension( final String name ) {
+    int startIndex = name.lastIndexOf( '.' );
+    if ( startIndex >= 0 ) {
+      return name.substring( startIndex, name.length() );
+    }
+    return null;
   }
+
   /**
-   * Even though the hidden flag is a property of the file node itself, and not the metadata child, it is considered metadata from PUC and is included in the
-   * setMetadata call
+   * Even though the hidden flag is a property of the file node itself, and not the metadata child, it is considered
+   * metadata from PUC and is included in the setMetadata call
    * 
    * @param pathId
    * @param metadata
    * @return
    */
   @PUT
-  @Path("{pathId : .+}/metadata")
-  @Produces({ APPLICATION_XML, APPLICATION_JSON })
-  public Response doSetMetadata(@PathParam("pathId") String pathId, List<StringKeyStringValueDto> metadata) {
+  @Path( "{pathId : .+}/metadata" )
+  @Produces( { APPLICATION_XML, APPLICATION_JSON } )
+  public Response doSetMetadata( @PathParam( "pathId" ) String pathId, List<StringKeyStringValueDto> metadata ) {
     try {
 
-      RepositoryFileDto file = getRepoWs().getFile(idToPath(pathId));
-      RepositoryFileAclDto fileAcl = getRepoWs().getAcl(file.getId());
+      RepositoryFileDto file = getRepoWs().getFile( idToPath( pathId ) );
+      RepositoryFileAclDto fileAcl = getRepoWs().getAcl( file.getId() );
 
-      boolean canManage = PentahoSessionHolder.getSession().getName().equals(fileAcl.getOwner())
-          || (getPolicy().isAllowed(RepositoryReadAction.NAME) && getPolicy().isAllowed(RepositoryCreateAction.NAME) && getPolicy().isAllowed(AdministerSecurityAction.NAME));
+      boolean canManage =
+          PentahoSessionHolder.getSession().getName().equals( fileAcl.getOwner() )
+              || ( getPolicy().isAllowed( RepositoryReadAction.NAME )
+                    && getPolicy().isAllowed( RepositoryCreateAction.NAME ) && getPolicy().isAllowed(
+                      AdministerSecurityAction.NAME ) );
 
-      if (!canManage) {
+      if ( !canManage ) {
 
-        if (fileAcl.isEntriesInheriting()) {
-          List<RepositoryFileAclAceDto> aces = getRepoWs().getEffectiveAces(file.getId());
-          fileAcl.setAces(aces, fileAcl.isEntriesInheriting());
+        if ( fileAcl.isEntriesInheriting() ) {
+          List<RepositoryFileAclAceDto> aces = getRepoWs().getEffectiveAces( file.getId() );
+          fileAcl.setAces( aces, fileAcl.isEntriesInheriting() );
         }
 
-        for (int i = 0; i < fileAcl.getAces().size(); i++) {
-          RepositoryFileAclAceDto acl = fileAcl.getAces().get(i);
-          if (acl.getRecipient().equals(PentahoSessionHolder.getSession().getName())) {
-            if (acl.getPermissions().contains(RepositoryFilePermission.ACL_MANAGEMENT.ordinal())
-                || acl.getPermissions().contains(RepositoryFilePermission.ALL.ordinal())) {
+        for ( int i = 0; i < fileAcl.getAces().size(); i++ ) {
+          RepositoryFileAclAceDto acl = fileAcl.getAces().get( i );
+          if ( acl.getRecipient().equals( PentahoSessionHolder.getSession().getName() ) ) {
+            if ( acl.getPermissions().contains( RepositoryFilePermission.ACL_MANAGEMENT.ordinal() )
+                || acl.getPermissions().contains( RepositoryFilePermission.ALL.ordinal() ) ) {
               canManage = true;
               break;
             }
@@ -1083,53 +1113,55 @@ public class FileResource extends AbstractJaxRSResource {
         }
       }
 
-      if (canManage) {
-        Map<String, Serializable> fileMetadata = getRepository().getFileMetadata(file.getId());
+      if ( canManage ) {
+        Map<String, Serializable> fileMetadata = getRepository().getFileMetadata( file.getId() );
         boolean isHidden = false;
 
-        for (StringKeyStringValueDto nv : metadata) {
+        for ( StringKeyStringValueDto nv : metadata ) {
           // don't add hidden to the list because it is not actually part of the metadata node
-          if ((nv.getKey().contentEquals("_PERM_HIDDEN"))) {
-            isHidden = Boolean.parseBoolean(nv.getValue());
+          if ( ( nv.getKey().contentEquals( "_PERM_HIDDEN" ) ) ) {
+            isHidden = Boolean.parseBoolean( nv.getValue() );
           } else {
-            fileMetadata.put(nv.getKey(), nv.getValue());
+            fileMetadata.put( nv.getKey(), nv.getValue() );
           }
         }
 
         // now update the rest of the metadata
-        if (!file.isFolder()) {
-          getRepository().setFileMetadata(file.getId(), fileMetadata);
+        if ( !file.isFolder() ) {
+          getRepository().setFileMetadata( file.getId(), fileMetadata );
         }
 
         // handle hidden flag if it is different
-        if (file.isHidden() != isHidden) {
-          file.setHidden(isHidden);
+        if ( file.isHidden() != isHidden ) {
+          file.setHidden( isHidden );
 
           /*
-           * Since we cannot simply set the new value, use the RepositoryFileAdapter to create a new instance and then update the original.
+           * Since we cannot simply set the new value, use the RepositoryFileAdapter to create a new instance and then
+           * update the original.
            */
-          RepositoryFile sourceFile = getRepository().getFileById(file.getId());
-          RepositoryFileDto destFileDto = RepositoryFileAdapter.toFileDto(sourceFile);
+          RepositoryFile sourceFile = getRepository().getFileById( file.getId() );
+          RepositoryFileDto destFileDto = RepositoryFileAdapter.toFileDto( sourceFile );
 
-          destFileDto.setHidden(isHidden);
+          destFileDto.setHidden( isHidden );
 
-          RepositoryFile destFile = RepositoryFileAdapter.toFile(destFileDto);
+          RepositoryFile destFile = RepositoryFileAdapter.toFile( destFileDto );
 
           // add the existing acls and file data
-          RepositoryFileAcl acl = getRepository().getAcl(sourceFile.getId());
-          if (!file.isFolder()) {
-            IRepositoryFileData data = getRepository().getDataForRead(sourceFile.getId(), SimpleRepositoryFileData.class);
-            getRepository().updateFile(destFile, data, null);
-            getRepository().updateAcl(acl);
+          RepositoryFileAcl acl = getRepository().getAcl( sourceFile.getId() );
+          if ( !file.isFolder() ) {
+            IRepositoryFileData data =
+                getRepository().getDataForRead( sourceFile.getId(), SimpleRepositoryFileData.class );
+            getRepository().updateFile( destFile, data, null );
+            getRepository().updateAcl( acl );
           } else {
-            getRepository().updateFolder(destFile, null);
+            getRepository().updateFolder( destFile, null );
           }
         }
         return Response.ok().build();
       } else {
-        return Response.status(Response.Status.UNAUTHORIZED).build();
+        return Response.status( Response.Status.UNAUTHORIZED ).build();
       }
-    } catch (Throwable t) {
+    } catch ( Throwable t ) {
       return Response.serverError().build();
     }
   }
@@ -1140,67 +1172,68 @@ public class FileResource extends AbstractJaxRSResource {
    * @param path
    * @return
    */
-  private boolean isPathValid(String path) {
-    if (path.startsWith("/etc") || path.startsWith("/system")) {
+  private boolean isPathValid( String path ) {
+    if ( path.startsWith( "/etc" ) || path.startsWith( "/system" ) ) {
       return false;
     }
     return true;
   }
 
-  private boolean isPath(String pathId) {
-	   return pathId != null && pathId.contains(":");
+  private boolean isPath( String pathId ) {
+    return pathId != null && pathId.contains( ":" );
   }
-  private void sortByLocaleTitle(final Collator collator, final RepositoryFileTreeDto tree) {
 
-    if (tree == null || tree.getChildren() == null || tree.getChildren().size() <= 0) {
+  private void sortByLocaleTitle( final Collator collator, final RepositoryFileTreeDto tree ) {
+
+    if ( tree == null || tree.getChildren() == null || tree.getChildren().size() <= 0 ) {
       return;
     }
 
-    for (RepositoryFileTreeDto rft : tree.getChildren()) {
-      sortByLocaleTitle(collator, rft);
-      Collections.sort(tree.getChildren(), new Comparator<RepositoryFileTreeDto>() {
+    for ( RepositoryFileTreeDto rft : tree.getChildren() ) {
+      sortByLocaleTitle( collator, rft );
+      Collections.sort( tree.getChildren(), new Comparator<RepositoryFileTreeDto>() {
         @Override
-        public int compare(RepositoryFileTreeDto repositoryFileTree, RepositoryFileTreeDto repositoryFileTree2) {
+        public int compare( RepositoryFileTreeDto repositoryFileTree, RepositoryFileTreeDto repositoryFileTree2 ) {
           String title1 = repositoryFileTree.getFile().getTitle();
           String title2 = repositoryFileTree2.getFile().getTitle();
 
-          if (collator.compare(title1, title2) == 0) {
-            return title1.compareTo(title2); // use lexical order if equals ignore case
+          if ( collator.compare( title1, title2 ) == 0 ) {
+            return title1.compareTo( title2 ); // use lexical order if equals ignore case
           }
 
-          return collator.compare(title1, title2);
+          return collator.compare( title1, title2 );
         }
-      });
+      } );
     }
   }
 
   public RepositoryDownloadWhitelist getWhitelist() {
-    if (whitelist == null) {
+    if ( whitelist == null ) {
       whitelist = new RepositoryDownloadWhitelist();
     }
     return whitelist;
   }
 
-  public void setWhitelist(RepositoryDownloadWhitelist whitelist) {
+  public void setWhitelist( RepositoryDownloadWhitelist whitelist ) {
     this.whitelist = whitelist;
-  }  
-  
+  }
+
   public static IAuthorizationPolicy getPolicy() {
-    if(policy == null){
-      policy = PentahoSystem.get(IAuthorizationPolicy.class);
+    if ( policy == null ) {
+      policy = PentahoSystem.get( IAuthorizationPolicy.class );
     }
     return policy;
   }
 
   public static IUnifiedRepository getRepository() {
-    if(repository == null){
-      repository = PentahoSystem.get(IUnifiedRepository.class);
+    if ( repository == null ) {
+      repository = PentahoSystem.get( IUnifiedRepository.class );
     }
     return repository;
   }
 
   public static DefaultUnifiedRepositoryWebService getRepoWs() {
-    if(repoWs == null){
+    if ( repoWs == null ) {
       repoWs = new DefaultUnifiedRepositoryWebService();
     }
     return repoWs;
